增加了ssh文件调试时上传到目标ssh主机的功能。

--- a/package.json
+++ b/package.json
@@ -231,6 +231,11 @@
 								"type": "object",
 								"description": "If this is set then the extension will connect to an ssh host and run GDB there",
 								"properties": {
+									"scpPush": {
+										"type": "array",
+										"description": "上传的文件或目录",
+										"default": []
+									},
 									"host": {
 										"type": "string",
 										"description": "Remote host name/ip to connect to"
